--- a/views/partials/post.ejs
+++ b/views/partials/post.ejs
@@ -4,7 +4,7 @@
 
       <% if(locals.posts){ %>  
 
-        <% posts.forEach((post) => { %>
+        <% posts.forEach((post,index) => { %>
             <div class="col-md-12 ">
                 <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-5 d-flex flex-column position-static">
@@ -12,12 +12,23 @@
                         <h3 class="mb-0"><%= post.title %></h3>
                         <div class="mb-1 text-body-secondary"><%= post.content %></div>
                         <p class="card-text mb-auto"><%= post.time %></p>
+                        
+                        <br>
+                        <form action="/edit" method="post">
+                            <input type="text" hidden value="<%= index %>">
+                            <button class="btn btn-outline-secondary col-2" type="submit">Edit</button>
+                        </form>
+                        <form action="/delete" method="post">
+                            <input type="text" hidden value="<%= index %>" name="index">
+                            <button class="btn btn-outline-danger col-2" type="submit">Delete</button>
+                        </form>
                     </div>
                     <div class="col-auto d-none d-lg-block postimage">
                         <center>
                             <img src="<%= post.link %>" width="200">
                         </center>
                     </div>
+                    
                 </div>
             </div>
 
