--- a/views/editPost.ejs
+++ b/views/editPost.ejs
@@ -1,30 +1,43 @@
 <%- include("partials/header.ejs") %>
 
     <div class="form-signin w-100 m-auto container createpost">
+        
         <center>
-            <form method="post" action="/create">
-                <h1 class="h3 mb-3 fw-normal">Edit Your Post</h1>
 
-                <div class="form-floating col-6">
-                    <input type="text" class="form-control" name="Category" required>
-                    <label for="Category">Category</label>
-                </div>
-                <div class="form-floating col-6">
-                    <input type="text" class="form-control" name="Title" required>
-                    <label for="Title">Title</label>
-                </div>
-                <div class="form-floating col-6">
-                    <input type="text" class="form-control" name="Content" required>
-                    <label for="Content">Content</label>
-                </div>
-                <div class="form-floating col-6">
-                    <input type="text" class="form-control" name="ImageUrl" required>
-                    <label for="ImageUrl">Image Url</label>
-                </div>
-                <div class="col-6">
-                    <button class="btn btn-primary w-100 py-2 col-6" type="submit">Post</button>
-                </div>
-            </form>
+            <% if(locals.editalbepost){ %>
+                <form method="post" action="/edit">
+                    <h1 class="h3 mb-3 fw-normal">Edit Your Post</h1>
+                    <div class="form-group col-4">
+                        <label for="">Category</label>
+                        <input type="text" class="form-control" name="Category" placeholder="<%= editalbepost.Category %>">
+                        <br>
+                    </div>
+                    <div class="form-group col-4">
+                        <label for="exampleInputPassword1">Title</label>
+                        <input type="text" class="form-control" name="Title" placeholder="<%= editalbepost.Title %>">
+                        <br>
+                    </div>
+                    <div class="form-group col-4">
+                        <label for="">Content</label>
+                        <input type="text" class="form-control" name="Content" placeholder="<%= editalbepost.Content %>">
+                        <br>
+                    </div>
+                    <div class="form-group col-4">
+                        <label for="exampleInputPassword1">Image Url</label>
+                        <input type="text" class="form-control" name="ImageUrl" placeholder="<%= editalbepost.ImageUrl %>">
+                        <br>
+                    </div>
+                    <div class="form-group form-check">
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        <input type="hidden" name="index" value="<%= index %>">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+
+
+            <%} %>
+
         </center>
     </div>
 
