--- a/views/partials/post.ejs
+++ b/views/partials/post.ejs
@@ -12,10 +12,9 @@
                         <h3 class="mb-0"><%= post.title %></h3>
                         <div class="mb-1 text-body-secondary"><%= post.content %></div>
                         <p class="card-text mb-auto"><%= post.time %></p>
-                        
                         <br>
-                        <form action="/edit" method="post">
-                            <input type="text" hidden value="<%= index %>">
+                        <form action="/editPost" method="post">
+                            <input type="text" hidden value="<%= index %>" name="index">
                             <button class="btn btn-outline-secondary col-2" type="submit">Edit</button>
                         </form>
                         <form action="/delete" method="post">
